--- a/package.json
+++ b/package.json
@@ -1,5 +1,24 @@
 {
   "dependencies": {
     "express": "^4.18.1"
-  }
+  },
+  "name": "fuzzy-goggles",
+  "version": "1.0.0",
+  "main": "hello-node.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kobyingram11/fuzzy-goggles.git"
+  },
+  "author": "Kingram",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kobyingram11/fuzzy-goggles/issues"
+  },
+  "homepage": "https://github.com/kobyingram11/fuzzy-goggles#readme",
+  "keywords": [],
+  "description": ""
 }
