--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "hello-node.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node hello-node.js"
   },
   "repository": {
     "type": "git",
